- brought reviews back to presentation layer.
- views are now separated from the work. YES!!!