@@ -241,6 +241,14 @@ function youtube_embed($youtube_id,$size_factor) {
 	return '<object width=\''.$width.'\' height=\''.$height.'\'><param name=\'movie\' value=\'http://www.youtube.com/v/'.$youtube_id.'?fs=1&amp;hl=en_US\'></param><param name=\'allowFullScreen\' value=\'true\'></param><param name=\'allowscriptaccess\' value=\'always\'></param><embed src=\'http://www.youtube.com/v/'.$youtube_id.'?fs=1&amp;hl=en_US\' type=\'application/x-shockwave-flash\' allowscriptaccess=\'always\' allowfullscreen=\'true\' width=\''.$width.'\' height=\''.$height.'\'></embed></object>';
 }
 
+function imdb_id_to_url($imdb_id) {
+	return 'http://www.imdb.com/title/tt'.$imdb_id.'/';
+}
+
+function ttc_id_to_url($ttc_id) {
+	return 'http://www.teach12.com/ttcx/coursedesclong2.aspx?cid='.$ttc_id;
+}
+
 function youtube_id_to_url($youtube_id) {
 	return 'http://www.youtube.com/v/'.$youtube_id;
 }
